fixing cert step checkbox spacing and list

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
 
 aside {
   position: absolute;
-  left: 65%;
+  left: 70%;
   padding: 8px;
   border-color: black;
   border-width: 2px;
